fixing router issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profile-me",
-  "homepage": "https://mgiwa78.github.io/profileme-we-app.git/",
+  "homepage": "https://mgiwa78.github.io/profileme-we-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
